--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@nestjs/platform-express": "^11.1.0",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.9.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.9.7",
     "leaflet": "^1.9.4",
+    "lodash.throttle": "^4.1.1",
+    "next": "^15.3.2",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.3"
